# cartograph

./: .dockerignore  .gitattributes  .gitignore  README.md  justfile  p12-cartograph.md
.github/workflows/: ci.yml
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/cartograph/: database.py  deps.py  main.py  seed.py  settings.py
apps/api/cartograph/analytics/: router.py
apps/api/cartograph/auth/: models.py  router.py  schemas.py  security.py
apps/api/cartograph/drivers/: models.py  router.py  schemas.py
apps/api/cartograph/geofences/: models.py  router.py  schemas.py  service.py
apps/api/cartograph/orders/: models.py  router.py  schemas.py
apps/api/cartograph/routes/: engine.py  models.py  optimizer.py  router.py  schemas.py  service.py
apps/api/cartograph/service_areas/: geojson.py  models.py  router.py  schemas.py
apps/api/cartograph/tests/: conftest.py  test_analytics.py  test_auth.py  test_eta.py  test_geofences.py  test_health.py  test_optimize_endpoint.py  test_optimizer.py  test_orders.py  test_schema.py  test_service_areas.py  test_settings.py  test_tiles.py
apps/api/cartograph/tiles/: cache.py  router.py  service.py
apps/api/migrations/: env.py  script.py.mako
apps/api/migrations/versions/: 0001_initial_schema.py  0002_pg_partman.py  0003_users.py  0004_tile_geom_indexes.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: main.tsx
apps/web/src/components/: CoveragePanel.tsx  DriversPanel.tsx  MapView.tsx  OrdersPanel.tsx
apps/web/src/lib/: api.ts  coverage.test.ts  coverage.ts  format.ts
apps/web/src/routes/: LoginPage.tsx  MapPage.tsx
apps/web/src/styles/: index.css
docs/runbooks/: backup-restore.md  deploy.md  osm-refresh.md  pg-partman.md
infra/caddy/: Caddyfile  web.Dockerfile
infra/compose/: docker-compose.dev.yml  docker-compose.prod.yml  init.sql  maintenance.sh  postgres.Dockerfile
infra/osm/: README.md
scripts/osm/: download.sh  load.sh
