[project]
name = "cartograph"
version = "0.1.0"
description = "Geospatial intelligence API for last-mile delivery"
license = "AGPL-3.0-or-later"
license-files = ["../../LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.30",
    "geoalchemy2>=0.15",
    "shapely>=2.0",
    "h3>=4.0",
    "pyproj>=3.6",
    "redis[asyncio]>=5.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-sdk>=1.25",
    "passlib[argon2]>=1.7",
    "python-jose[cryptography]>=3.3",
    "email-validator>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "black>=24.4",
    "mypy>=1.10",
    "types-passlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cartograph"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["jose.*", "shapely.*", "geoalchemy2.*", "mapbox_vector_tile.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# One loop for the whole session: the app's module-level engine pools
# connections bound to the loop they were created on.
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["cartograph/tests"]

[dependency-groups]
dev = [
    "mapbox-vector-tile>=2.2.0",
]
